--- a/index.qmd
+++ b/index.qmd
@@ -2,9 +2,11 @@
 title: "Pingfan Hu"
 image: images/profile.png
 toc: false
+grid: 
+  body-width: 1200px
 about:
   template: trestles
-  image-width: 15em
+  image-width: 18em
   image-shape: round
   links:
     - icon: linkedin
@@ -30,5 +32,5 @@ I am a research software engineer and PhD candidate in [EMSE](https://emse.engin
 
 #### Research Focus:
 
-1. **Transportation Research**: I study human behavior in sustainable transportation using discrete choice models. My work focuses on smart charging [adoption](projects/01_smart_charging_adoption) and [cost-benefit](projects/02_smart_charging_cost_benefit) analysis, providing insights to help policymakers and utilities design better systems that benefit both the grid and EV owners.
+1. **Transportation Research**: I study human behavior in sustainable transportation using discrete choice models. My work focuses on smart charging [adoption](projects/01_sc_adoption) and [economy](projects/02_smc_economy) analysis, providing insights to help policymakers and utilities design better systems that benefit both the grid and EV owners.
 2. **Open-Source Software**: I develop open-source tools for survey construction and data analysis. [surveydown](https://surveydown.org) is a flexible platform for creating surveys with {{< var rnolink >}}, Quarto, and Shiny. [sdstudio](https://sdstudio.surveydown.org) is a companion GUI for surveydown.
